k8s/alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
spec:
  selector:
    alertmanager: alertmanager
  ports:
    - protocol: TCP
      port: 9093
      targetPort: 9093
